Bug 260040 - [iOS] Crash under WebPage::requestAutocorrectionData()
Summary: [iOS] Crash under WebPage::requestAutocorrectionData()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-08-10 13:59 PDT by Chris Dumez
Modified: 2023-08-10 15:54 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-08-10 13:59:10 PDT
Crash under WebPage::requestAutocorrectionData():

```
5 WebKit: WebKit::WebPage::requestAutocorrectionData(WTF::String const&, WebKit::CallbackID) <==
        5 WebKit: WebKit::WebPage::requestAutocorrectionData(WTF::String const&, WebKit::CallbackID)
          5 WebKit: void IPC::handleMessage<Messages::WebPage::RequestAutocorrectionData, WebKit::WebPage, void (WebKit::WebPage::*)(WTF::String const&, WebKit::CallbackID)>(IPC::Decoder&, WebKit::WebPage*, void (WebKit::WebPage::*)(WTF::String const&, WebKit::CallbackID))
            5 WebKit: IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&)
              5 WebKit: WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&)
                5 WebKit: IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)
```
Comment 1 Chris Dumez 2023-08-10 13:59:18 PDT
<rdar://37124831>
Comment 2 Chris Dumez 2023-08-10 14:01:03 PDT
Pull request: https://github.com/WebKit/WebKit/pull/16579
Comment 3 EWS 2023-08-10 15:54:30 PDT
Committed 266788@main (aacd324e2cb0): <https://commits.webkit.org/266788@main>

Reviewed commits have been landed. Closing PR #16579 and removing active labels.