[iOS] Crash under WebPage::requestAutocorrectionData() https://bugs.webkit.org/show_bug.cgi?id=260040 rdar://37124831

Reviewed by Wenson Hsieh.

Make sure we don't dereference std::nullopt.

* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::requestAutocorrectionData):

Canonical link: https://commits.webkit.org/266788@main